# platzky-plugin-cookiecutter

./: LICENSE  cookiecutter.json
{{cookiecutter.repo_name}}/: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
{{cookiecutter.repo_name}}/.github/: dependabot.yml
{{cookiecutter.repo_name}}/.github/workflows/: lint.yml  release.yml  test.yml  tests.yml  todo.yml
{{cookiecutter.repo_name}}/tests/: test_plugin.py
{{cookiecutter.repo_name}}/{{cookiecutter.package_name}}/: __init__.py  plugin.py
