[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "{{ cookiecutter.package_name }}"
version = "0.1.0"
description = "{{ cookiecutter.description }}"
authors = ["{{ cookiecutter.author }}"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^{{ cookiecutter.python_version }}"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
platzky = "{{ cookiecutter.platzky_version }}"
black = "^24.10.0"
ruff = "^0.8.3"
pyright = "^1.1.390"
coverage = "^7.6.9"
interrogate = "^1.7.0"
python-semantic-release = "^10.4.1"

[tool.black]
line-length = 100
target-version = ["py{{ cookiecutter.python_version | replace('.', '') }}"]

[tool.ruff]
line-length = 100
target-version = "py{{ cookiecutter.python_version | replace('.', '') }}"
show-fixes = true

[tool.ruff.lint]
select = [
    "I",
    "F",
    "E",
    "W",
    "PT",
    "RUF",
]

[tool.pyright]
pythonVersion = "{{ cookiecutter.python_version }}"
pythonPlatform = "All"
typeCheckingMode = "strict"
reportMissingImports = true
reportMissingTypeStubs = false
reportMissingParameterType = true
reportUnknownArgumentType = true
reportUnknownMemberType = true
reportUnknownVariableType = true
reportUnknownParameterType = true
reportUnnecessaryTypeIgnoreComment = true
reportUntypedClassDecorator = false
reportUntypedFunctionDecorator = false
reportUnnecessaryIsInstance = false
reportUnusedFunction = true
reportUntypedBaseClass = false

[tool.pytest.ini_options]
markers = [
    "skip_coverage: skip coverage for this test",
]

[tool.interrogate]
fail-under = 95
ignore-init-method = true
ignore-init-module = true
ignore-magic = true
ignore-private = true
ignore-semiprivate = false
exclude = ["tests", "docs"]

[tool.semantic_release]
allow_zero_version = true
major_on_zero = false
version_toml = ["pyproject.toml:tool.poetry.version"]
build_command = "poetry build"
dist_path = "dist/"
upload_to_release = true
remove_dist = false
commit_author = "semantic-release <semantic-release>"
commit_message = "chore(release): {version} [skip ci]"
tag_format = "{version}"

[tool.semantic_release.changelog]
exclude_commit_patterns = []

[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG.md"
output_format = "md"
mask_initial_release = true

[tool.semantic_release.branches.main]
match = "main"
prerelease = false

[tool.semantic_release.commit_parser_options]
allowed_tags = ["feat", "fix", "docs", "style", "refactor", "perf", "test", "build", "ci", "chore", "revert"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]

[tool.semantic_release.publish]
dist_glob_patterns = ["dist/*"]
upload_to_vcs_release = true
